continue add authentication and the next handle global exception and format response

--- a/eCommerce.Shared/eCommerce.Shared.csproj
+++ b/eCommerce.Shared/eCommerce.Shared.csproj
@@ -15,4 +15,9 @@
 
 
 
+    <ItemGroup>
+      <Folder Include="Exceptions\" />
+      <Folder Include="Filters\" />
+    </ItemGroup>
+
 </Project>
