--- a/eCommerce.Host/appsettings.Development.json
+++ b/eCommerce.Host/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default" : "Server=127.0.0.1;Port=5432;Database=eCommerce;Integrated Security=true;"
+    "Default" : "Server=127.0.0.1;Port=5432;Database=eCommerce;User Id=postgres;Password=123456789;CommandTimeout=20;"
   },
   "JWTToken": {
     "Key": "E1D4EE366616A48E2C4FF9E9CDAED",
