init angular project

--- a/eCommerce.Host/appsettings.Development.json
+++ b/eCommerce.Host/appsettings.Development.json
@@ -13,5 +13,6 @@
     "Issuer": "https://myapp.com",
     "Audience": "myapp.com",
     "ExpiryTimeDay": 1
-  }
+  },
+  "CorsOrigins": "http://localhost:4200"
 }
