--- a/angular-admin/package.json
+++ b/angular-admin/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@nebular/eva-icons": "^11.0.1",
+    "@nebular/theme": "^11.0.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "eva-icons": "^1.1.3",
     "ng-bootstrap": "^1.6.3",
     "ngx-cookie-service": "^16.0.1",
     "ngx-toastr": "^17.0.2",
