--- a/eCommerce.Shared/eCommerce.Shared.csproj
+++ b/eCommerce.Shared/eCommerce.Shared.csproj
@@ -9,8 +9,11 @@
     <ItemGroup>
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
       <PackageReference Include="Volo.Abp.Core" Version="6.0.3" />
+
+
 
 
 
