--- a/eCommerce.Host/eCommerce.Host.csproj
+++ b/eCommerce.Host/eCommerce.Host.csproj
@@ -15,6 +15,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
         <PackageReference Include="Volo.Abp.Core" Version="6.0.3" />
     </ItemGroup>
