--- a/eCommerce.Host/appsettings.Development.json
+++ b/eCommerce.Host/appsettings.Development.json
@@ -14,5 +14,6 @@
     "Audience": "myapp.com",
     "ExpiryTimeDay": 1
   },
-  "CorsOrigins": "http://localhost:4200"
+  "CorsOrigins": "http://localhost:4200",
+  "RedisCache": ""
 }
