implement unit of work pattern

--- a/eCommerce.EntityFrameworkCore/eCommerce.EntityFrameworkCore.csproj
+++ b/eCommerce.EntityFrameworkCore/eCommerce.EntityFrameworkCore.csproj
@@ -32,6 +32,21 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
+
+
+
+
+
+
+
+
+
+    <ItemGroup>
+      <Folder Include="Cores\Enums\" />
+    </ItemGroup>
+
+
+
     </ItemGroup>
 
 
