--- a/eCommerce.Host/eCommerce.Host.csproj
+++ b/eCommerce.Host/eCommerce.Host.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.22">
