--- a/eCommerce.Shared/eCommerce.Shared.csproj
+++ b/eCommerce.Shared/eCommerce.Shared.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Castle.Windsor" Version="6.0.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.22" />
@@ -14,6 +15,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
       <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
       <PackageReference Include="Volo.Abp.Core" Version="6.0.3" />
+
 
 
 
