--- a/eCommerce.EntityFrameworkCore/eCommerce.EntityFrameworkCore.csproj
+++ b/eCommerce.EntityFrameworkCore/eCommerce.EntityFrameworkCore.csproj
@@ -12,6 +12,10 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.23" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.22">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Npgsql" Version="6.0.10" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
       <PackageReference Include="Volo.Abp.Core" Version="6.0.3" />
