--- a/eCommerce.Host/appsettings.Development.json
+++ b/eCommerce.Host/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "App": {
+    "Host": "https://localhost:5001/",
+    "Client": "http://localhost:4200/"
+  },
   "ConnectionStrings": {
     "Default" : "Server=127.0.0.1;Port=5432;Database=eCommerce;User Id=postgres;Password=123456789;CommandTimeout=20;"
   },
