--- a/angular-admin/package.json
+++ b/angular-admin/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "@types/angular": "^1.8.7",
     "bootstrap": "^5.3.2",
     "eva-icons": "^1.1.3",
     "ng-bootstrap": "^1.6.3",
