--- a/angular-admin/package.json
+++ b/angular-admin/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@microsoft/signalr": "^7.0.12",
     "@nebular/eva-icons": "^11.0.1",
     "@nebular/theme": "^11.0.1",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
