--- a/angular-admin/package.json
+++ b/angular-admin/package.json
@@ -34,6 +34,7 @@
     "ngx-cookie-service": "^16.0.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "simple-peer": "^9.11.1",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -44,6 +45,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/simple-peer": "^9.11.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
